--- a/package.json
+++ b/package.json
@@ -4,8 +4,41 @@
   "description": "Static Site to host Ansible4FedRAMP content",
   "main": "src/index.js",
   "scripts": {
+    "build": "webpack --mode production",
+    "watch": "webpack --mode development --watch",
+    "start": "nodemon --watch webpack.config.js --exec \"webpack-dev-server --mode development\"",
     "test": "echo \"no tests\""
   },
   "author": "Jonathan I. Davila <@defionscode>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@babel/core": "^7.0.1",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@fortawesome/fontawesome-pro": "^5.3.1",
+    "autoprefixer": "^9.1.5",
+    "babel-loader": "^8.0.2",
+    "compression-webpack-plugin": "^2.0.0",
+    "css-loader": "^1.0.0",
+    "debug": "^4.0.1",
+    "file-loader": "^2.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.2",
+    "node-sass": "^4.9.3",
+    "nodemon": "^1.18.4",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.0",
+    "uglifyjs-webpack-plugin": "^2.0.0",
+    "webpack": "^4.19.0",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.8",
+    "yaml-loader": "^0.5.0"
+  },
+  "dependencies": {
+    "@conductorlab/tonic": "^7.2.1",
+    "bulma": "^0.7.1",
+    "domready": "^1.0.8",
+    "js-yaml": "^3.12.0"
+  }
 }
